코드숨 8주차 안료

--- a/week4/index.html
+++ b/week4/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <div id="test">테스트</div>
     <script src="main.js"></script>
   </body>
 </html>
